--- a/Web.MainApplication/Web.MainApplication.csproj
+++ b/Web.MainApplication/Web.MainApplication.csproj
@@ -295,6 +295,7 @@
     <Compile Include="WebUtility\WebClaimIdentity.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\DB_Tritsur.mdf" />
     <Content Include="Content\adminlte\bower_components\jquery-ui\ui\minified\autocomplete.min.js" />
     <Content Include="Content\adminlte\bower_components\moment\moment.js" />
     <Content Include="Content\adminlte\plugins\datatables\dataTables.bootstrap.css" />
@@ -513,7 +514,6 @@
     <Content Include="Views\BatchMixes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\BaseOdata\" />
     <Folder Include="Views\EntityApi\" />
   </ItemGroup>
