--- a/Web.MainApplication/Web.MainApplication.csproj
+++ b/Web.MainApplication/Web.MainApplication.csproj
@@ -322,7 +322,6 @@
     <Content Include="Content\css\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\css\dataTables.bootstrap.min.css" />
     <Content Include="Content\css\googlefont\fontgoogle.css" />
-    <Content Include="Content\database\DB_Tritsur.mdf" />
     <Content Include="Content\Icon\index.puppy-dog-ajax-spinner.svg" />
     <Content Include="Content\Icon\index.ripple-radio-preloader.svg" />
     <Content Include="Content\Icon\index.spooky-ghost-ajax-preloader.svg" />
@@ -516,6 +515,7 @@
     <Content Include="Views\BatchMixes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\database\" />
     <Folder Include="Views\BaseOdata\" />
     <Folder Include="Views\EntityApi\" />
   </ItemGroup>
