--- a/Web.MainApplication/Web.MainApplication.csproj
+++ b/Web.MainApplication/Web.MainApplication.csproj
@@ -517,6 +517,7 @@
     <Content Include="Views\BatchMixes\Details.cshtml" />
     <Content Include="Views\BatchMixes\Edit.cshtml" />
     <Content Include="Views\BatchMixes\Index.cshtml" />
+    <Content Include="Views\BatchMixes\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
