--- a/Repository.Application/App.Config
+++ b/Repository.Application/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="ApplicationEntities" connectionString="metadata=res://*/DataModel.ApplicationDataModel.csdl|res://*/DataModel.ApplicationDataModel.ssdl|res://*/DataModel.ApplicationDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=RockCompanyTransaction;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DB_TritsurEntities" connectionString="metadata=res://*/DataModel.ModelTritsur.csdl|res://*/DataModel.ModelTritsur.ssdl|res://*/DataModel.ModelTritsur.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=DB_Tritsur;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_TritsurEntities" connectionString="metadata=res://*/DataModel.ModelTritsur.csdl|res://*/DataModel.ModelTritsur.ssdl|res://*/DataModel.ModelTritsur.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=DB_Tritsur;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
